# btrfsutil-rs

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  Vagrantfile  bindgen_whitelist.toml  btrfsutil_wrapper.h  build.rs
.github/: dependabot.yml
.github/workflows/: check.yml  publish.yml
examples/: subvolume_iterator_info.rs
scripts/: btrfsutil_build.sh  btrfsutil_test.sh  btrfsutil_testenv_bootstrap.sh  btrfsutil_testenv_create.sh  btrfsutil_testenv_destroy.sh  btrfsutil_testenv_teardown.sh  provision.sh  wrapper.sh
src/: common.rs  lib.rs  qgroup.rs  sync.rs
src/error/: glue.rs  lib.rs  mod.rs
src/subvolume/: iterator.rs  mod.rs  privileged.rs  subvol.rs  subvol_info.rs  subvol_path.rs
src/testing/: loopbacked.rs  mod.rs  test_lib.rs
tests/: another.rs  common.rs
vagrant/: Vagrantfile  btrfsutil_test.sh  btrfsutil_testenv_bootstrap.sh  btrfsutil_testenv_teardown.sh  provision.sh
