[package]
name = "btrfsutil"
version = "0.2.0"
authors = ["cezarmathe <me@cezarmathe.com>", "Alex Pearson <alex@alexpear.com>"]
description = "Safe wrappers for libbtrfsutil."
readme = "README.md"
repository = "https://github.com/cezarmathe/btrfsutil-rs"
documentation = "https://docs.rs/btrfsutil/"
license = "MIT"
edition = "2021"
keywords = ["btrfs"]


[package.metadata.docs.rs]
rustc-args = ["--cfg",  "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]


[lib]
name = "btrfsutil"
path = "src/lib.rs"

[dependencies]
btrfsutil-sys = "1.3.0"

bitflags = "1.2"
chrono = "0.4.11"
thiserror = "1.0"
uuid = "1.2.2"
libc = "0.2.75"

[dev-dependencies]
libmount = "0.1.11"
loopdev = "0.4"
nix = "0.18"
tempfile = "3.0.1"

[features]
default = []

# Enable glue errors. Theoretically, glue errors should not exist, but this feature can give you
# extra reliability. If not enabled, glue errors will make the library panic.
enable-glue-errors = []

# waiting on a new release
# https://github.com/mdaffin/loopdev/issues/65
[patch.crates-io.loopdev]
git = "https://github.com/mulkieran/loopdev"
branch = "bump-bindgen-reduce-version"

[[example]]
name = "subvolume_iterator_info"
